make-a-wish-salesforce/src/objects/WM4SF3__WalkMeExtension__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores the WalkMe extension parameters</description>
    <fields>
        <fullName>WM4SF3__CTA_image_path__c</fullName>
        <label>CTA image path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM4SF3__Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM4SF3__Extension_Guid__c</fullName>
        <label>Extension Guid</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM4SF3__Extension_Profile__c</fullName>
        <label>Extension Profile</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM4SF3__QA_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Mode</label>
        <type>Checkbox</type>
    </fields>
    <label>WalkMeExtension</label>
</CustomObject>